# yourlearning-editor

./: .gitignore  Cargo.toml  Cargo.toml-e  Dioxus.toml  add-learning.sh  build.sh  release.sh  run.sh
.github/workflows/: release.yml
assets/: styles.css
src/: app.rs
src-tauri/: Cargo.toml  Cargo.toml-e  tauri.conf.json
src-tauri/assets/extension/: background.js  content.js  manifest.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/control/: sqlite.rs
src-tauri/src/controllers/: apple_podcast_learning.rs  article_learning.rs  extension.rs  learning_entry.rs  mod.rs  rss_podcast_learning.rs  spotify_podcast_learning.rs  token.rs  vimeo_learning.rs  youtube_learning.rs
